       R itself become more restricted? The fix was to insert a COP() call
       as opposed cop() call (the argument named cop).
10. Added the gEVcop().
11. Added rotation to cophalf (Nelsen's triangular copula) within the examples
       of asCOP.Rd and bilmoms.Rd by including a para argument. This is useful
       for further testing and as related to exploring nuskew() and nustar().
12. Overhauled joeskewCOP() after more extensive testing including nuskew() and
       nustar() for parameter estimation. There are now changes in the numerical
       outputs including the basic scale of each statistic. (See joeskewCOP.Rd)
       The biggest problems seem to have been in the numerical version of the
       sample nustar, which prompted the overhaul. *** No users have reported
       any problems with the older scheme, but no users are actually known to be
       using nuskew() and nustar(). ***


POTENTIAL TODOs:

\author{William Asquith \email{william.asquith@ttu.edu} }
  Make such conversions through out or go back to W.H. Asquith?

EMPIRcopdf() can be replaced by EMPIRcop() as the later is fully 
  vectorized itself and makes presumably a lesser impact on memory (faster)?

stabtaildepf.Rd --- Need to audit stabtaildepf.Rd and complete documentation.

EMPIRcop.Rd --- Need to audit level.curves in the Examples.

Implementation of state-of-the-practice nonparametric estimators of
  lower and upper tail dependence parameters. Neither of the three books
  cited within deal with this. A turn towards recommended literature by
  Joe (2014) is needed.

Goodness-of-fit of the Kendall Function following Genest et. al. (2006,
  Goodness-of-fit procedures for copula models based on the probability
  integral transformation: Scand J. Statist 33.

Convergence evaluators for the Monte Carlo integration in bilmoms() and
  kullCOP() to enhance computation times.

rhobevCOP() study for a copula yielding 0.
