@@ -437,9 +437,13 @@ Version 2.1.2--
        sample nustar, which prompted the overhaul. *** No users have reported
        any problems with the older scheme, but no users are actually known to be
        using nuskew() and nustar(). ***
+13. Added only.bilmoms argument to bilmoms() to skip L-comoment computation, 
+       in order to speed execution.
 
 
 POTENTIAL TODOs:
+
+Make the jump to a integrate() basis of the bivariate L-moments
 
 \author{William Asquith \email{william.asquith@ttu.edu} }
   Make such conversions through out or go back to W.H. Asquith?
